fix: remove overflow-x property from main content styling

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,7 +9,7 @@
   min-height: 100vh;
   padding: 30px;
   border-radius: 20px 0 0 20px;
-  overflow-x: hidden;
+
 }
 
 /* Transaksi, Goal, Dashboard Box */
